--- a/happycowgame/Gemfile
+++ b/happycowgame/Gemfile
@@ -43,3 +43,6 @@ group :development, :test do
   gem 'spring'
 end
 
+#Bootstrap integration
+gem 'bootstrap-sass', '~> 3.2.0'
+gem 'autoprefixer-rails'
